--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
     padding: 80px 0;
   }
   .wrapper .app {
-    width: 90%;
+    width: 375px;
     max-height: 100vh;
     margin: 0 auto;
     border-radius: 22px;
@@ -31,6 +31,11 @@
     -moz-user-select: none;
     -ms-user-select: none;
         user-select: none;
+  }
+  @media screen and (max-width: 480px) {
+    .wrapper .app{
+      width: 90%;
+    }
   }
   .wrapper .app .info {
     position: relative;
