--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,8 @@
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
-        user-select: none;
+    user-select: none;
+    cursor: pointer;
   }
   @media screen and (max-width: 480px) {
     .wrapper .app{
