--- a/src/index.css
+++ b/src/index.css
@@ -227,6 +227,7 @@
     text-decoration: none;
     text-align: center;
     border:none;
+    cursor: pointer;
   }
   .wrapper .app .bottom a i {
     margin-right: 5px;
